--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@angular/service-worker": "~10.2.0",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "html2canvas": "^1.0.0-alpha.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
