--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.0",
+    "@angular/animations": "^16.2.1",
     "@angular/cdk": "^10.2.6",
-    "@angular/common": "~10.2.0",
+    "@angular/common": "^16.2.1",
     "@angular/compiler": "~10.2.0",
-    "@angular/core": "~10.2.0",
-    "@angular/forms": "~10.2.0",
+    "@angular/core": "^16.2.1",
+    "@angular/forms": "^16.2.1",
     "@angular/material": "^10.2.6",
-    "@angular/platform-browser": "~10.2.0",
-    "@angular/platform-browser-dynamic": "~10.2.0",
-    "@angular/router": "~10.2.0",
-    "@angular/service-worker": "~10.2.0",
+    "@angular/platform-browser": "^16.2.1",
+    "@angular/platform-browser-dynamic": "^16.2.1",
+    "@angular/router": "^16.2.1",
+    "@angular/service-worker": "^16.2.1",
     "angular-cli-ghpages": "^1.0.0-rc.1",
     "html2canvas": "^1.0.0-alpha.12",
     "rxjs": "~6.6.0",
@@ -29,21 +29,21 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "^16.2.0",
     "@angular/compiler-cli": "~10.2.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^6.4.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
