--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2022",
-    "module": "es2022",
+    "target": "ES2022",
+    "module": "ES2022",
     "lib": [
-      "es2022",
+      "ES2022",
       "dom"
     ]
   }
